--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.jrvansuita:PickImage:+'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.0.1@aar'
+    compile 'com.google.zxing:core:3.2.0'
     testCompile 'junit:junit:4.12'
 }
