--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,14 +44,23 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
-            android:theme="@style/AppTheme.NoActionBar" />
+        android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ProfileActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EditProfileActivity"></activity>
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".EditProfileActivity" />
+        android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".AddComplaint" />
-        <activity android:name=".ShowQRCode"></activity>
+        <activity android:name=".ShowQRCode" />
+        <activity
+            android:name=".Rewards"
+            android:label="@string/title_activity_rewards"
+            android:parentActivityName=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.complus.community.HomeActivity" />
+        </activity>
     </application>
 
 </manifest>
