--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
+        <activity
+            android:name=".Leaderboard"
+            android:label="@string/title_activity_leaderboard"></activity>
     </application>
 
 </manifest>
