--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddComplaint" />
+        <activity android:name=".AddComplaint"
+            android:parentActivityName=".HomeActivity" />
         <activity
             android:name=".Events"
             android:label="@string/title_activity_events"
