--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,14 +31,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddComplaint"
+        <activity
+            android:name=".AddComplaint"
             android:parentActivityName=".HomeActivity" />
-
         <activity
             android:name=".Events"
             android:label="@string/title_activity_events"
@@ -47,31 +46,29 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
-
         <activity
             android:name=".ProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.complus.community.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".EditProfileActivity"
+            android:parentActivityName=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.complus.community.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".ShowQRCode"
             android:parentActivityName=".HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
-
-        <activity android:name=".EditProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".HomeActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.complus.community.HomeActivity" />
-        </activity>
-
-        <activity android:name=".ShowQRCode"
-            android:parentActivityName=".HomeActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.complus.community.HomeActivity" />
-        </activity>
-
         <activity
             android:name=".Rewards"
             android:label="@string/title_activity_rewards"
@@ -81,7 +78,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
-
         <activity
             android:name=".Leaderboard"
             android:label="@string/title_activity_leaderboard"
@@ -90,7 +86,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
-
         <activity
             android:name=".History"
             android:label="@string/title_activity_history"
@@ -99,6 +94,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.complus.community.HomeActivity" />
         </activity>
+        <activity android:name=".EarnActivity" />
+        <activity android:name=".RewardActivity"></activity>
     </application>
 
 </manifest>
