--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,7 +95,15 @@
                 android:value="com.complus.community.HomeActivity" />
         </activity>
         <activity android:name=".EarnActivity" />
-        <activity android:name=".RewardActivity"></activity>
+        <activity android:name=".RewardActivity" />
+        <activity android:name=".ScannerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
